tdf#104888 change mode to Matrix is a modification

When editing a formula, changing mode from normal to matrix
should be treated as a modification to enable recalculation.
Other changes do not count.

Change-Id: Ida903a1f21de5c33d6376af9120d2e0319b7b7ec
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183236
Reviewed-by: Laurent Balland <laurent.balland@mailo.fr>
Tested-by: Jenkins